@@ -10,6 +10,7 @@ Changes in 1.1:
 - Ensure that torrent names are not interpreted as directories (244418)
 - Fix crash when cleaning up PeerConnectors (245796)
 - Fix crash on exit when cleaning up UPnP requests
+- UPnPRouter now retrieves the external IP of the router
 
 Changes in 1.0.3:
 - Fix crash in HTTPAnnounceJob due to abort call (244198)
